--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(href='/vendor/bootstrap.min.css', rel='stylesheet', media='screen')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+  block preStyles
+    link(rel='stylesheet', href='/css/style.css')
     block styles
     block preScripts
   body
