--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,26 @@ a.col-md-6{
     display: inline-block
 }
 
-ul
-{
-    list-style-type: none;
+* { -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; }
+
+.selectable .ui-selecting {
+    border: 2px dashed #ff0000;
+}
+
+.selectable .ui-selected {
+    border: 2px solid #ff0000;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(255, 0, 0, 1);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(255, 0, 0, 1);
+    box-shadow: 0px 0px 8px 0px rgba(255, 0, 0, 1);
+}
+
+.selectable img {
+    margin: 5px;
+    padding: 5px;
+    border: 2px solid #ffffff;
+}
+
+.selected-items {
+    border: 2px solid #ff0000;
+    line-height: 32px;
 }
