--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,3 +31,26 @@ a.col-md-6{
     border: 2px solid #ff0000;
     line-height: 32px;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 0px;
+    overflow:none;
+    background-color: #f5f5f5;
+    -moz-transition:all 0.5s ease-in-out;
+    -o-transition:all 0.5s ease-in-out;
+    transition:all 0.5s ease-in-out;
+    -webkit-transition:all 0.5s ease-in-out;
+}
+
+.footer.show {
+    height: 48px;
+
+    -moz-transition:all 0.5s ease-in-out;
+    -o-transition:all 0.5s ease-in-out;
+    transition:all 0.5s ease-in-out;
+    -webkit-transition:all 0.5s ease-in-out;
+}
