- fixed issue with registration - changed showing all images to logged in user on homepage

--- a/views/register.jade
+++ b/views/register.jade
@@ -13,7 +13,7 @@ block content
             .form-group
                 input.form-control(type='password', name="password", required, placeholder='Password')
             button.btn.btn-default(type='submit') Submit
-            input(type='hidden', name ='invitecode', id='invitecode', required, value='')
+            input(type='hidden', name ='invitecode', id='invitecode', required, value=InviteCode)
             br
             a(href='/')
                 button.btn.btn-primary(type="button") Cancel
