--- a/views/login.jade
+++ b/views/login.jade
@@ -6,14 +6,17 @@ block content
     .container
         h1 Login Page
         br
+        p(id="status")
         form(role='form', action="/login",method="post", style='max-width: 300px;')
             .form-group
-                input.form-control( id='username',type='emailController', name="username", placeholder='Enter Email Address')
+                input.form-control( id='username',type='emailController', name="username", required, autofocus, placeholder='Enter Email Address')
             .form-group
-                input.form-control(type='password', name="password", placeholder='Password')
+                input.form-control(id='password', type='password', name="password", required, placeholder='Password')
             button.btn.btn-default(type='submit') Submit
             br
             a(href='/')
                 button.btn.btn-primary(type="button") Cancel
             br
-            a(href='javascript:window.location = "/forgotPassword?username=" + document.getElementById("username").value') ForgotPassword
+            a(href='#', id="forgotPassword" data-action='/forgotPassword') ForgotPassword
+block postScripts
+    script(src='/js/login.js')
