--- a/views/register.jade
+++ b/views/register.jade
@@ -9,7 +9,7 @@ block content
         br
         form(role='form', action="/register",method="post", style='max-width: 300px;')
             .form-group
-                input.form-control(type='emailController', name="username", required, placeholder='Enter Email Address')
+                input.form-control(type='emailController', name="username", required, autofocus, placeholder='Enter Email Address')
             .form-group
                 input.form-control(type='password', name="password", required, placeholder='Password')
             button.btn.btn-default(type='submit') Submit
